--- a/FriendStagram/Main.storyboard
+++ b/FriendStagram/Main.storyboard
@@ -44,8 +44,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GiV-Uu-tr9">
-                                <rect key="frame" x="82" y="28" width="250" height="250"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="GiV-Uu-tr9">
+                                <rect key="frame" x="0.0" y="28" width="414" height="278"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -58,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Du-XX-t2M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1119" y="133"/>
+            <point key="canvasLocation" x="1118.840579710145" y="132.88043478260872"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="umn-fF-EI3">
@@ -522,6 +522,7 @@
     <resources>
         <image name="bg2" width="1080" height="1920"/>
         <image name="home" width="25" height="25"/>
+        <image name="placeholder" width="426" height="320"/>
         <image name="user" width="25" height="25"/>
     </resources>
 </document>
