Added new way of checking session and launch screen

--- a/FriendStagram/Base.lproj/Login.storyboard
+++ b/FriendStagram/Base.lproj/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Z2q-rb-HbK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MTc-sF-pLM">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -198,10 +198,40 @@
             </objects>
             <point key="canvasLocation" x="392" y="1497"/>
         </scene>
-        <!--Startup View Controller-->
+        <!--Launch View Controller-->
+        <scene sceneID="sna-MO-8bZ">
+            <objects>
+                <viewController id="MTc-sF-pLM" customClass="LaunchViewController" customModule="FriendStagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kJG-26-vyX"/>
+                        <viewControllerLayoutGuide type="bottom" id="deY-g3-ffm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vEp-Gg-v3H">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4TD-As-FYd">
+                                <rect key="frame" x="20" y="327" width="374" height="82"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="startupLabel" destination="4TD-As-FYd" id="1gK-te-Vcp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1kc-ic-Y4p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1542.0289855072465" y="1104.6195652173915"/>
+        </scene>
+        <!--startVC-->
         <scene sceneID="YIP-w6-S4N">
             <objects>
-                <viewController id="Z2q-rb-HbK" customClass="StartupViewController" customModule="FriendStagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="1" title="startVC" id="Z2q-rb-HbK" customClass="StartupViewController" customModule="FriendStagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="e0s-BE-ZKj"/>
                         <viewControllerLayoutGuide type="bottom" id="wcn-pg-BuH"/>
